crates/carta/tests/snapshots/golden_e2e__rst__native__internal-targets-multiple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Header
    1
    ( "second target" , [] , [] )
    [ Str "Section"
    , Space
    , Str "Title"
    , Span ( "first target" , [] , [] ) []
    ]
, Para
    [ Str "Body"
    , Space
    , Str "under"
    , Space
    , Str "the"
    , Space
    , Str "section."
    ]
]
