crates/carta/tests/snapshots/golden_e2e__rst__native__internal-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "intro" , [] , [] )
    [ Para
        [ Str "This"
        , Space
        , Str "paragraph"
        , Space
        , Str "carries"
        , Space
        , Str "the"
        , Space
        , Str "target"
        , Space
        , Str "identifier."
        ]
    ]
, Para
    [ Str "Jump"
    , Space
    , Str "back"
    , Space
    , Str "to"
    , Space
    , Str "the"
    , Space
    , Link ( "" , [] , [] ) [ Str "intro" ] ( "#intro" , "" )
    , Space
    , Str "section."
    ]
]
