crates/carta/tests/snapshots/golden_e2e__rst__native__line-blocks.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ LineBlock
    [ [ Str "The"
      , Space
      , Str "first"
      , Space
      , Str "line"
      , Space
      , Str "of"
      , Space
      , Str "verse"
      ]
    , [ Str "The"
      , Space
      , Str "second"
      , Space
      , Str "line"
      , Space
      , Str "of"
      , Space
      , Str "verse"
      ]
    , [ Str "The"
      , Space
      , Str "closing"
      , Space
      , Str "line"
      , Space
      , Str "of"
      , Space
      , Str "verse"
      ]
    ]
]
