crates/carta/tests/snapshots/golden_e2e__rst__native__math-directive-label.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Span
        ( "" , [] , [ ( "label" , "identity" ) ] )
        [ Math DisplayMath "e^{i\\pi} + 1 = 0" ]
    ]
]
