crates/carta/tests/snapshots/golden_e2e__rst__native__math-directive-multiple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Math DisplayMath "a = b + c"
    , Math DisplayMath "d = e - f"
    ]
]
